# Gpt4_Book

./: .env.example  Readme.md  main.py  requirements.txt
VoiceBooker/: README.md  pyproject.toml  requirements.txt
VoiceBooker/app/: main.py
VoiceBooker/app/database/: database.py  model.py
VoiceBooker/app/database/utils/: load_data.py
VoiceBooker/app/ebook/utils/: create_ebook.py
VoiceBooker/app/file_convertion/: epub_to_txt.py  pdf_to_txt.py
VoiceBooker/app/file_download/: queries.py
VoiceBooker/app/file_upload/: file_upload_mutations.py  mutation.py
VoiceBooker/app/file_upload/utils/: create_audiobook.py
VoiceBooker/app/gql/: mutations.py  queries.py  types.py
VoiceBooker/app/user/: mutations.py  queries.py  user_mutations.py
VoiceBooker/app/user/utils/: email.py  jwt.py  password.py  user.py
VoiceBooker/app/utils/: .env.example  decorators.py  load_env.py
VoiceBooker/app/utils/file_operations/: save_file.py
VoiceBooker/app/utils/security/: get_current_user.py  get_email_from_jwt.py  get_file_type.py
VoiceBooker/app/utils/security/validators/: validate_authorization_header.py  validate_file_type.py
VoiceBooker/gql_requests/mutations/user/: CreateUser.txt  DeleteUser.txt  LoginUser.txt  RefreshToken.txt  UpdateUser.txt
